--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.ts",
+    "production": "node ./build/index.js",
+    "postinstall": "tsc",
     "test": "jest",
     "build": "tsc"
   },
@@ -29,5 +31,8 @@
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
