--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     { "src": "./build/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "./build/server/routes/index.js" }
+    { "src": "/(.*)", "dest": "./build/index.js" }
   ]
 }
