--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "name": "api-node-jwt",
   "builds": [
-    { "src": "./build/index.js", "use": "@vercel/node" }
+    { "src": "./src/index.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "./build/index.js" }
+    { "src": "/(.*)", "dest": "./src/server/routes/index.ts" }
   ]
 }
