--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/index.js",
     "production": "node ./build/index.js",
     "postinstall": "tsc",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "author": "Renan Ferreira",
   "license": "ISC",
