--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
-  "name": "api-node-jwt",
   "builds": [
-    { "src": "./src/index.ts", "use": "@vercel/node" }
+    { "src": "./build/server/Server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "./src/server/routes/index.ts" }
+    { "src": "/(.*)", "dest": "./build/server/Server.js" }
   ]
 }
