--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "production": "node ./build/index.js",
     "postinstall": "tsc",
     "test": "jest",
-    "build": "tsc",
-    "start": "node build/index.js"
+    "build": "rimraf build && tsc",
+    "start": "nodemon src/index.ts",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add build",
+    "pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+    ]
   },
   "author": "Renan Ferreira",
   "license": "ISC",
@@ -28,6 +35,8 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
