--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "./build/server/Server.js", "use": "@vercel/node" }
+      {
+          "src": "build/index.js",
+          "use": "@vercel/node",
+          "config": { "includeFiles": ["build/**"] }
+      }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "./build/server/Server.js" }
+      {
+          "src": "/(.*)",
+          "dest": "build/index.js"
+      }
   ]
 }
