--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Renan Ferreira",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "@types/jest": "^29.5.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -36,6 +37,7 @@
     "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
     "pre-commit": "^1.2.2",
+    "prisma": "^5.7.1",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
