--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "production": "node ./build/index.js",
     "postinstall": "tsc",
     "test": "jest",
-    "build": "rimraf build && tsc",
+    "build": "prisma generate && rimraf build && tsc",
     "start": "nodemon src/index.ts",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add build",
