feat: implemented provider "pessoas"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,5 +111,8 @@
     "./node_modules",
     "./tests",
     "./build"
+  ],
+  "include": [
+    "c:/Users/Renan/Desktop/api-node-jwt/src/**/*.ts"
   ]
 }
