--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
   "author": "Renan Ferreira",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "@types/jest": "^29.5.11",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-jest": "^29.1.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@prisma/client": "^5.7.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
