--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "copy-webpack-plugin": "^12.0.0",
     "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
     "pre-commit": "^1.2.2",
